--- a/style.css
+++ b/style.css
@@ -751,7 +751,7 @@ ol {
 	top: 50%;
 	width: 605px;
 	height: 404px;
-	background-image: url(../img/feature/car.png);
+	background-image: url(https://themewagon.github.io/hvac/img/feature/car.png);
 	content: "";
 	-webkit-transform: translate(-300px, -202px);
 	-ms-transform: translate(-300px, -202px);
